--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ nav {
     width: 100%;
     border-radius: 18px;
 }
+
 /* BM calculator area */
 .bm-cal {
     padding: 100px;
@@ -230,6 +231,11 @@ nav {
     line-height: 120%;
 }
 
+.BM {
+    background: rgb(34, 34, 34);
+    padding: 50px 0;
+}
+
 .bm-cal p {
     color: rgba(255, 255, 255, 0.5);
     font-size: 14px;
@@ -237,6 +243,104 @@ nav {
     line-height: 24px;
     letter-spacing: 0.3px;
     margin-top: 10px;
+}
+
+.bm-container {
+    padding-top: 80px;
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+
+.chart h3 {
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 120%;
+}
+
+.chart table,
+th,
+td {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-collapse: collapse;
+    padding: 20px;
+}
+
+.chart table th {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 120%;
+}
+
+.chart table td {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+.calculator h3 {
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 120%;
+    margin-bottom: 15px;
+}
+
+.calculator p {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    margin-bottom: 30px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form input,
+select {
+    border-radius: 8px;
+    padding: 12px 40px 12px 20px;
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    margin-bottom: 10px;
+}
+
+form select {
+    color: rgba(255, 255, 255, 0.2);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+/* our-team */
+.our-team {
+    background: #000;
+    padding: 100px 0;
+}
+
+.members {
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 20px;
+    margin-top: 50px;
+}
+.member{
+}
+.member img{
+    width: 100%;
+    height: 100%;
+    border-radius: 18px;
+
 }
 
 /* Responsive for small device */
@@ -261,5 +365,20 @@ nav {
 
     .card-container {
         flex-direction: column;
+    }
+
+    .bm-cal {
+        padding: 0;
+    }
+
+    .bm-container {
+        flex-direction: column;
+    }
+
+    .card {
+        padding: 0px;
+    }
+    .members{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
