--- a/style.css
+++ b/style.css
@@ -334,13 +334,69 @@ form select {
     padding: 20px;
     margin-top: 50px;
 }
-.member{
-}
-.member img{
+
+.member {}
+
+.member img {
     width: 100%;
     height: 100%;
     border-radius: 18px;
 
+}
+
+.copy {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    margin-top: 20px;
+}
+
+/* footer */
+.footer {
+    background: #1A1A1A;
+    padding: 100px 0;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.company-details p {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    margin: 20px 0px;
+}
+
+.get-start-title {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 120%;
+    margin: 39px 0px;
+}
+
+.links a {
+    display: block;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 120%;
+    margin: 10px;
+    text-decoration: none;
+}
+
+.footer hr {
+    color: rgba(255, 255, 255, 0.2);
 }
 
 /* Responsive for small device */
@@ -378,7 +434,12 @@ form select {
     .card {
         padding: 0px;
     }
-    .members{
+
+    .members {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .footer-container {
         grid-template-columns: repeat(1, 1fr);
     }
 }
