--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     font-weight: 600;
     line-height: 22px;
     border: none;
+    margin-bottom: 10px;
 }
 
 .secondary-btn {
@@ -116,6 +117,64 @@ nav {
     padding-top: 6rem;
     gap: 200px;
     align-items: center;
+}
+
+.right-side {
+    position: relative;
+}
+
+.right-side .box-1 {
+    position: absolute;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(48, 48, 48, 0.54);
+    padding: 20px;
+    top: 80%;
+    left: 0;
+    display: flex;
+    gap: 10px;
+}
+.box-1 .one{
+    width: 40px;
+    height: 40px;
+    background: rgb(230, 83, 60);
+    border-radius: 50%;
+
+}
+.right-side .box-2 {
+    position: absolute;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(48, 48, 48, 0.54);
+    padding: 20px;
+    top: 40%;
+    right: 0;
+}
+
+.box-1 h4 {
+    color: rgb(250, 250, 249);
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+}
+
+.right-side .box-text {
+    color: rgba(239, 237, 232, 0.65);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+}
+
+.box-2 h4 {
+    color: rgb(255, 255, 255);
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 1px;
 }
 
 .hero-container .left-side h1 {
