--- a/style.css
+++ b/style.css
@@ -135,13 +135,15 @@ nav {
     display: flex;
     gap: 10px;
 }
-.box-1 .one{
+
+.box-1 .one {
     width: 40px;
     height: 40px;
     background: rgb(230, 83, 60);
     border-radius: 50%;
 
 }
+
 .right-side .box-2 {
     position: absolute;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -413,6 +415,29 @@ form select {
     margin-top: 20px;
 }
 
+/* about */
+.about {
+    background: #000;
+    padding: 50px 0;
+}
+.about .btn{
+    text-align: center;
+    margin-top: 30px;
+}
+.about hr{
+    margin: 50px 0;
+    text-align: center;
+}
+.about .about-second-title {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 120%;
+    padding-bottom: 20px;
+    text-align: center;
+    
+}
+
 /* footer */
 .footer {
     background: #1A1A1A;
@@ -460,9 +485,10 @@ form select {
 
 /* Responsive for small device */
 @media screen and (max-width: 576px) {
-    .container{
+    .container {
         padding: 20px;
     }
+
     .nav-links ul {
         display: none;
     }
